# SoftwarePipeline

./: .gitignore
gamedata/materials/: stk.mtl
gamedata/shaders/: geom.frag  geom.vert
gamedata/textures/: act_ekologt.tga  act_glass_universal.tga  act_glass_universal_nrm.tga  act_head_mask.tga  act_head_mask_nrm.tga  act_killer_nauchniy.tga  act_monolit.tga  act_ryukzak.tga  act_ryukzak_1.tga  act_ryukzak_2.tga  act_ryukzak_black.tga  act_ryukzak_nrm.tga  act_specnaz_glass.tga  act_specnaz_glass_nrm.tga  act_stalker.tga  act_stalker_black.tga  act_stalker_face.tga  act_stalker_face1.tga  act_stalker_face1_nrm.tga  act_stalker_face2.tga  act_stalker_face2_nrm.tga  act_stalker_face3.tga  act_stalker_face_nrm.tga  act_stalker_nrm.tga  act_svoboda1.tga  act_svoboda_nauchniy.tga
src/: CMakeLists.txt  main.cpp
src/Material/: Material.cpp  Material.h
src/Render/: RenderableMesh.cpp  RenderableMesh.h
src/RendererBackend/: Framebuffer.cpp  Framebuffer.h  Image.cpp  Image.h  Pipeline.hpp  Polygon.hpp  Viewport.cpp  Viewport.h
src/Shader/: Shader.cpp  Shader.h
src/Wavefront/: Common.hpp  MaterialLib.cpp  MaterialLib.h  Mesh.cpp  Mesh.h  MtlParser.cpp  MtlParser.h  ObjParser.cpp  ObjParser.h
src/hrs/: flags.hpp
src/hrs/math/: matrix.hpp  matrix_common.hpp  quaternion.hpp  vector_common.hpp
